fix: resolve vertical alignment error

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   background-color: #303136;
   display: flex;
   justify-content: center;
+  height: 100vh;
 }
 
 .parent {
